# tableau-sql-parser

./: Makefile  README.md  Symbio.md  pyproject.toml  requirements.ci.txt  requirements.txt
.github/workflows/: python-package.yml
src/: main.py  recursive_search.py  tableau_workbook.py
src/tableau_sql_parser/: main.py  output_formatting.py  recursive_search.py  tableau_workbook.py  utils.py
tableau_sql_parser/: cli.py  output_formatting.py  recursive_search.py  tableau_workbook.py  utils.py
tests/: test_recursive_search.py  test_tree_output.py
