[project]
name = "tableau-sql-parser"
version = "0.2.2"
description = "A tool for parsing Tableau custom SQL queries and extracting useful information"
authors = [
    { name = "Florian Drouet", email = "florian.drouet78@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
    "lxml>=5.4.0",
    "sqlfluff>=3.4.0",
]

[project.scripts]
sqlparse = "tableau_sql_parser.cli:main"

[project.urls]
Homepage = "https://github.com/florian-drouet/tableau-sql-parser"

[tool.uv]
package = true

[tool.ruff]
target-version = "py39"
line-length = 88

lint.select = [
  "E", "F", "W",    # Basic errors and warnings
  "A",              # Shadowing builtins
  "B",              # flake8-bugbear
  "C4",             # flake8-comprehensions
  "I",              # isort
  "N",              # pep8-naming
  "ANN",            # Type annotations
  "UP",             # pyupgrade
  "SIM",            # Simplify
  "PLC", "PLE", "PLW" # pylint
]